--- a/css/style.css
+++ b/css/style.css
@@ -1,87 +1,143 @@
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital@1&family=Work+Sans:wght@200;300;400;500;600;700;800&display=swap');
 *{
-    font-family: 'Ubuntu', sans-serif;
     padding: 0;
     margin: 0;
-    color: white;
 }
-a{
-    text-decoration: none;
-}
+
 body{
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: black;
 }
-.container{
-    margin: 30px 10px 0;
-    background-image: 
-    linear-gradient(to right,#01022def 30%,#00000088),
-    url("https://ca-times.brightspotcdn.com/dims4/default/c1a61d9/2147483647/strip/true/crop/3840x2160+0+0/resize/1200x675!/format/webp/quality/80/?url=https%3A%2F%2Fcalifornia-times-brightspot.s3.amazonaws.com%2F03%2F0d%2F44d557194a8db3da6f4536cc2f30%2Favtr-226.jpg");   
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    height:calc(100vh - 30px) ;
-    width: calc(100% - 20px);
+body::after{
+    content: '';
+    background-color: red;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    clip-path: circle(40% at right 70%);
+    z-index: -1;
 }
-.container:hover{
-    background-image: 
-    linear-gradient(to right,#01022def 30%,transparent),
-    url("https://ca-times.brightspotcdn.com/dims4/default/c1a61d9/2147483647/strip/true/crop/3840x2160+0+0/resize/1200x675!/format/webp/quality/80/?url=https%3A%2F%2Fcalifornia-times-brightspot.s3.amazonaws.com%2F03%2F0d%2F44d557194a8db3da6f4536cc2f30%2Favtr-226.jpg");   
-    
+.card{
+    width: 80%;
+    height: 80%;
+    background-color: rgba(255, 255, 255, 0.215);
+    border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+    overflow: hidden;
+    padding-bottom: 25px;
 }
-header{
+.card header{
+    width: 80%;
+    margin:30px auto 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-header ul{
-    margin: 20px;
-    list-style: none;
-    display: flex;
-    width: 60%;
-    justify-content: space-evenly;
-
-}
-header ul li {
-    margin-left: 5px;
-}
-header >a{
-    font-size: 30px;
-    text-transform: uppercase;
-    margin-left: 20px;
-}
-header ul a:hover{
-    border-bottom: 3px solid white;
-}
-.content{
-    
-    width: max(200px,25%);
-    margin: 100px 0 0 20px;
-    padding: 20px;
-}
-.content h1{
-    text-transform: uppercase;
-    font-size: 60px;
-    margin-bottom: 10px;
-}
-.content p{
-    font-size: 20px;
-    margin-bottom: 10px;
-}
-.content button{
-    font-size: 20px;
-    cursor: pointer;
-    color: black;
-    background-color: white;
-    border: 2px solid transparent;
-    padding: 10px;
-    border-radius: 5px;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    -ms-border-radius: 5px;
-    -o-border-radius: 5px;
-}
-.content button:hover{
+.card header .logo{
     color: white;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: bold;
+    letter-spacing: 2px;
+    font-size: 32px;
+}
+.card header ul{
+    list-style: none;
+}   
+.card header ul li{
+    display: inline-block;
+}   
+.card header ul li a{
+    color: white;
+    text-decoration: none;
+    font-size: 20px;
+    text-transform: capitalize;
+    margin-left: 5px;
+}   
+.card header ul li a:hover{
+    color: red;
+}   
+.content{
+    width: 80%;
+    height: 100%;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.content .text{
+    width: 40%;
+}
+.content .text h1{
+    text-transform: uppercase;
+    padding-bottom: 20px;
+    line-height: 1.6;
+    font-size: 32px;
+    color: white;
+}
+.content .text p{
+    line-height: 1.3;
+    color: white;
+}
+.content .image{
+    width: 40%;
+}
+.content .image img{
+    width: 400px;
+}
+@media (min-width:1100px) and (max-width:1200px){
+    .content .image img{
+        width: 300px;
+    }
+}
+@media (min-width:800px) and (max-width:1100px){
+    .content .image img{
+        width: 220px;
+    }
+}
+@media (min-width:600px) and (max-width:800px){
+    .content .image img{
+        width: 150px;
+    }
+}
+@media (max-width:600px){
+    .card header,.card .content{
+        flex-direction: column;
+        justify-content: center;
+    }
+    .card header .logo{
+        padding-bottom: 20px;
+    }
+    .content .text,.content .image{
+        width: 80%;
+    }
+    .content .image img{
+        width: 200px;
+    }
+}
+@media (max-width:900px){
+    body::after{
+        clip-path: circle(40% at bottom );
+    }
+}
+video{
+    width: 100%;
+    display: none;
+    height: 80%;
+}
+button{
+    padding: 10px;
+    border: 2px solid red;
     background-color: transparent;
-    border-color: white;
+    color: white;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
 }
